# mqgx--mlflow-model

./: .gitignore  MLproject  README.md  code_repository.yaml  conda.yaml  dummy.json  mq.generator.yml  pyproject.toml
notebooks/: README.md
reports/: README.md
src/train/: train_model.py
test/: test.md
