[tool.poetry]
name = "mlflow--sample-project"
version = "0.1.0"
description = "Some tests with MLFlow"
authors = ["Michael Wellner <michaelwellner@kpmg.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.1"
numpy = "^1.20.0"
pandas = "^1.2.1"
mlflow = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
