[tool.poetry]
name = "{{ PROJECT_NAME }}"
version = "0.1.0"
description = "{{{ DESCRIPTION }}}"
authors = ["{{{ AUTHOR }}}"]
license = "Apache-2.0"

[tool.poetry.dependencies]
maquette = "^0.1.6"
numpy = "^1.20.0"
pandas = "^1.2.1"
python = ">=3.8,<3.9"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
